# streamlit-vector-search

./: .gitignore  README.md  docker-compose-elasticsearch.json  docker-compose-elasticsearch.yml  docker-compose-opensearch.json  docker-compose-opensearch.yml  docker-postgres-pgvector.sh  index.py  pyproject.toml  requirements.txt  secrets.toml  test_en.txt  test_ko.txt
